Verify equality